--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nft_service_runner",
+  "name": "artion-1155-transfer-tracker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -15,20 +15,11 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "email-validator": "^2.0.4",
     "eslint": "^7.22.0",
     "ethers": "^5.1.3",
     "express": "^4.17.1",
-    "form-data": "^4.0.0",
-    "formidable": "^1.2.2",
-    "fs": "^0.0.1-security",
-    "mongodb": "^3.6.5",
-    "mongoose": "^5.12.2",
-    "node-localstorage": "^2.1.6",
-    "nodemailer": "^6.5.0",
     "prettier": "^2.2.1",
     "rawmodel": "^1.33.0",
-    "url-exists-nodejs": "^0.1.0",
     "web3": "^1.3.5"
   }
 }
