--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^7.22.0",
     "ethers": "^5.1.3",
     "express": "^4.17.1",
+    "ko-sleep": "^1.1.4",
     "prettier": "^2.2.1",
     "rawmodel": "^1.33.0",
     "web3": "^1.3.5"
